# BlendLink

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  _test_fingerprint.py  install.py  install_deps.py  pyproject.toml  start_daemon.py  update.py  version.py
blender_addon/: __init__.py
client/: p2p_client.py
daemon/: __init__.py  api.py  main.py
shared/: hardware_fingerprint.py  ledger_sync.py
tracker/: main.py
